# tech-doc-scanner

./: .gitignore  README.md  main.py  pyproject.toml
PRPs/: tech-doc-scanner-implementation.md
PRPs/examples/Archon Docling Rag Implementation/: Archon_Claude_Code_Docling_Implementation.md
PRPs/requests/: INITIAL.md
examples/: README.md  basic_conversion.py  batch_with_chunks.py  custom_pipeline.py  partial_parsing.py
old_dont_use/: PLANNING.md  TASKS.md
src/: __init__.py  chunker.py  cli.py  config.py  converter.py  optimizer.py  utils.py
tests/: __init__.py  test_chunker.py  test_cli.py  test_config.py  test_converter.py  test_imports.py  test_optimizer.py  test_utils.py
