[project]
name = "tech-doc-scanner"
version = "0.1.0"
description = "High-performance document conversion agent powered by Docling for technical documents with smart chunking for RAG pipelines"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling[vlm]>=2.55.0",
    "transformers>=4.30.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pypdf>=6.1.2",
]

[project.scripts]
docling-convert = "src.cli:cli"
doc2md = "src.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
